assignment1_recognizer/exercise/target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "';'", "','", "'('", 
                     "')'", "'{'", "'}'", "'='", "'+'", "'-'", "'*'", "'/'", 
                     "'return'" ]

    symbolicNames = [ "<INVALID>", "INT", "FLOAT", "SEMI", "COMMA", "LRB", 
                      "RRB", "LCB", "RCB", "EQUAL", "ADD", "SUB", "MUL", 
                      "DIV", "RETURN", "INTLIT", "FLOATLIT", "ID", "WS", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_decl = 2
    RULE_vardecl = 3
    RULE_idlist = 4
    RULE_idlist2 = 5
    RULE_funcdecl = 6
    RULE_paramdecl = 7
    RULE_paramlist = 8
    RULE_paramlist2 = 9
    RULE_param = 10
    RULE_body = 11
    RULE_body_ele_list = 12
    RULE_body_ele_list2 = 13
    RULE_body_ele = 14
    RULE_statement = 15
    RULE_statement_kind = 16
    RULE_assignSt = 17
    RULE_callSt = 18
    RULE_returnSt = 19
    RULE_exprlist = 20
    RULE_exprlist2 = 21
    RULE_expr = 22
    RULE_addexpr = 23
    RULE_subexpr = 24
    RULE_mulexpr = 25
    RULE_divexpr = 26
    RULE_numlit = 27
    RULE_var_type = 28

    ruleNames =  [ "program", "decls", "decl", "vardecl", "idlist", "idlist2", 
                   "funcdecl", "paramdecl", "paramlist", "paramlist2", "param", 
                   "body", "body_ele_list", "body_ele_list2", "body_ele", 
                   "statement", "statement_kind", "assignSt", "callSt", 
                   "returnSt", "exprlist", "exprlist2", "expr", "addexpr", 
                   "subexpr", "mulexpr", "divexpr", "numlit", "var_type" ]

    EOF = Token.EOF
    INT=1
    FLOAT=2
    SEMI=3
    COMMA=4
    LRB=5
    RRB=6
    LCB=7
    RCB=8
    EQUAL=9
    ADD=10
    SUB=11
    MUL=12
    DIV=13
    RETURN=14
    INTLIT=15
    FLOATLIT=16
    ID=17
    WS=18
    ERROR_CHAR=19
    UNCLOSE_STRING=20
    ILLEGAL_ESCAPE=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(BKOOLParser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(BKOOLParser.DeclsContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.decl()
            self.state = 59
            self.decls()
            self.state = 60
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(BKOOLParser.DeclContext,0)


        def decls(self):
            return self.getTypedRuleContext(BKOOLParser.DeclsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = BKOOLParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 66
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INT, BKOOLParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.decl()
                self.state = 63
                self.decls()
                pass
            elif token in [BKOOLParser.EOF]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(BKOOLParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = BKOOLParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 68
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(BKOOLParser.Var_typeContext,0)


        def idlist(self):
            return self.getTypedRuleContext(BKOOLParser.IdlistContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = BKOOLParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.var_type()
            self.state = 73
            self.idlist()
            self.state = 74
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def idlist2(self):
            return self.getTypedRuleContext(BKOOLParser.Idlist2Context,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_idlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist" ):
                return visitor.visitIdlist(self)
            else:
                return visitor.visitChildren(self)




    def idlist(self):

        localctx = BKOOLParser.IdlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idlist)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(BKOOLParser.ID)
                self.state = 77
                self.idlist2()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idlist2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def idlist2(self):
            return self.getTypedRuleContext(BKOOLParser.Idlist2Context,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_idlist2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdlist2" ):
                return visitor.visitIdlist2(self)
            else:
                return visitor.visitChildren(self)




    def idlist2(self):

        localctx = BKOOLParser.Idlist2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idlist2)
        try:
            self.state = 85
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.match(BKOOLParser.COMMA)
                self.state = 82
                self.match(BKOOLParser.ID)
                self.state = 83
                self.idlist2()
                pass
            elif token in [BKOOLParser.SEMI, BKOOLParser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(BKOOLParser.Var_typeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def paramdecl(self):
            return self.getTypedRuleContext(BKOOLParser.ParamdeclContext,0)


        def body(self):
            return self.getTypedRuleContext(BKOOLParser.BodyContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = BKOOLParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.var_type()
            self.state = 88
            self.match(BKOOLParser.ID)
            self.state = 89
            self.paramdecl()
            self.state = 90
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LRB(self):
            return self.getToken(BKOOLParser.LRB, 0)

        def paramlist(self):
            return self.getTypedRuleContext(BKOOLParser.ParamlistContext,0)


        def RRB(self):
            return self.getToken(BKOOLParser.RRB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_paramdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamdecl" ):
                return visitor.visitParamdecl(self)
            else:
                return visitor.visitChildren(self)




    def paramdecl(self):

        localctx = BKOOLParser.ParamdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_paramdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(BKOOLParser.LRB)
            self.state = 93
            self.paramlist()
            self.state = 94
            self.match(BKOOLParser.RRB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def paramlist2(self):
            return self.getTypedRuleContext(BKOOLParser.Paramlist2Context,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = BKOOLParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramlist)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INT, BKOOLParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.param()
                self.state = 97
                self.paramlist2()
                pass
            elif token in [BKOOLParser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paramlist2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def paramlist2(self):
            return self.getTypedRuleContext(BKOOLParser.Paramlist2Context,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_paramlist2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist2" ):
                return visitor.visitParamlist2(self)
            else:
                return visitor.visitChildren(self)




    def paramlist2(self):

        localctx = BKOOLParser.Paramlist2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paramlist2)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.SEMI]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(BKOOLParser.SEMI)
                self.state = 103
                self.param()
                self.state = 104
                self.paramlist2()
                pass
            elif token in [BKOOLParser.RRB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(BKOOLParser.Var_typeContext,0)


        def idlist(self):
            return self.getTypedRuleContext(BKOOLParser.IdlistContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = BKOOLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.var_type()
            self.state = 110
            self.idlist()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCB(self):
            return self.getToken(BKOOLParser.LCB, 0)

        def body_ele_list(self):
            return self.getTypedRuleContext(BKOOLParser.Body_ele_listContext,0)


        def RCB(self):
            return self.getToken(BKOOLParser.RCB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = BKOOLParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(BKOOLParser.LCB)
            self.state = 113
            self.body_ele_list()
            self.state = 114
            self.match(BKOOLParser.RCB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_ele_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_ele(self):
            return self.getTypedRuleContext(BKOOLParser.Body_eleContext,0)


        def body_ele_list2(self):
            return self.getTypedRuleContext(BKOOLParser.Body_ele_list2Context,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_body_ele_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_ele_list" ):
                return visitor.visitBody_ele_list(self)
            else:
                return visitor.visitChildren(self)




    def body_ele_list(self):

        localctx = BKOOLParser.Body_ele_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_body_ele_list)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INT, BKOOLParser.FLOAT, BKOOLParser.RETURN, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.body_ele()
                self.state = 117
                self.body_ele_list2()
                pass
            elif token in [BKOOLParser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_ele_list2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_ele(self):
            return self.getTypedRuleContext(BKOOLParser.Body_eleContext,0)


        def body_ele_list2(self):
            return self.getTypedRuleContext(BKOOLParser.Body_ele_list2Context,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_body_ele_list2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_ele_list2" ):
                return visitor.visitBody_ele_list2(self)
            else:
                return visitor.visitChildren(self)




    def body_ele_list2(self):

        localctx = BKOOLParser.Body_ele_list2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_body_ele_list2)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INT, BKOOLParser.FLOAT, BKOOLParser.RETURN, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.body_ele()
                self.state = 123
                self.body_ele_list2()
                pass
            elif token in [BKOOLParser.RCB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_eleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(BKOOLParser.StatementContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_body_ele

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody_ele" ):
                return visitor.visitBody_ele(self)
            else:
                return visitor.visitChildren(self)




    def body_ele(self):

        localctx = BKOOLParser.Body_eleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_body_ele)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.INT, BKOOLParser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 128
                self.vardecl()
                pass
            elif token in [BKOOLParser.RETURN, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_kind(self):
            return self.getTypedRuleContext(BKOOLParser.Statement_kindContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BKOOLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.statement_kind()
            self.state = 133
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_kindContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignSt(self):
            return self.getTypedRuleContext(BKOOLParser.AssignStContext,0)


        def callSt(self):
            return self.getTypedRuleContext(BKOOLParser.CallStContext,0)


        def returnSt(self):
            return self.getTypedRuleContext(BKOOLParser.ReturnStContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_statement_kind

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_kind" ):
                return visitor.visitStatement_kind(self)
            else:
                return visitor.visitChildren(self)




    def statement_kind(self):

        localctx = BKOOLParser.Statement_kindContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_statement_kind)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.assignSt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.callSt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 137
                self.returnSt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def EQUAL(self):
            return self.getToken(BKOOLParser.EQUAL, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_assignSt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignSt" ):
                return visitor.visitAssignSt(self)
            else:
                return visitor.visitChildren(self)




    def assignSt(self):

        localctx = BKOOLParser.AssignStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_assignSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKOOLParser.ID)
            self.state = 141
            self.match(BKOOLParser.EQUAL)
            self.state = 142
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LRB(self):
            return self.getToken(BKOOLParser.LRB, 0)

        def exprlist(self):
            return self.getTypedRuleContext(BKOOLParser.ExprlistContext,0)


        def RRB(self):
            return self.getToken(BKOOLParser.RRB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_callSt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCallSt" ):
                return visitor.visitCallSt(self)
            else:
                return visitor.visitChildren(self)




    def callSt(self):

        localctx = BKOOLParser.CallStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 36, self.RULE_callSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(BKOOLParser.ID)
            self.state = 145
            self.match(BKOOLParser.LRB)
            self.state = 146
            self.exprlist()
            self.state = 147
            self.match(BKOOLParser.RRB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(BKOOLParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_returnSt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnSt" ):
                return visitor.visitReturnSt(self)
            else:
                return visitor.visitChildren(self)




    def returnSt(self):

        localctx = BKOOLParser.ReturnStContext(self, self._ctx, self.state)
        self.enterRule(localctx, 38, self.RULE_returnSt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.match(BKOOLParser.RETURN)
            self.state = 150
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def exprlist2(self):
            return self.getTypedRuleContext(BKOOLParser.Exprlist2Context,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_exprlist
